--- a/gb/20/9/25/n12430051.md
+++ b/gb/20/9/25/n12430051.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oruicd3776/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oruicd3776/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oruicd3776/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oruicd3776/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oruicd3776/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oruicd3776/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oruicd3776/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oruicd3776/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oruicd3776/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oruicd3776/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oruicd3776/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oruicd3776/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oruicd3776/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oruicd3776/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oruicd3776/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oruicd3776/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oruicd3776/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oruicd3776/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oruicd3776/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oruicd3776/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oruicd3776/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oruicd3776/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oruicd3776/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oruicd3776/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>浓情中秋 前大陆讲师感恩李洪志大师（下）</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/4143dfb6053bb4e8-600x400.jpg" />
 <h6>中秋节将至，前大陆讲师邹兰非常感激李洪志师父引领自己走在修炼的路上。（本人提供）
 </h6>
 <hr>
-<p>【大纪元2020年09月25日讯】（大纪元记者李奕<ahref="https://github.com/oruicd3776/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>采访报导）初见邹兰，会觉人如其名，兰心蕙性、质朴不争。</p>
-<p>“如果让一切再回到以前，可以给我更优越的生活，却让我放弃修炼<ahref="https://github.com/oruicd3776/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，问我干不干——我还是会说：不干。”</p>
-<p><ahref=><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/17/n12410042.md#1">接上文</a></p>
+<p>【大纪元2020年09月25日讯】（大纪元记者李奕<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>采访报导）初见邹兰，会觉人如其名，兰心蕙性、质朴不争。</p>
+<p>“如果让一切再回到以前，可以给我更优越的生活，却让我放弃修炼<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，问我干不干——我还是会说：不干。”</p>
+<p><ahref=><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/17/n12410042.md#1">接上文</a></p>
 <h2>从模仿好人到做个好人</h2>
 <p>“从我记事开始，晚上睡觉就很难一下入睡。我时常会想一个问题：人到底为什么活着？总有一天会两眼一闭、躺在地底下棺材里的那种恐惧时常袭来。”</p>
 <p>“所以我经常会做恶梦，我也一直怕独自走夜路，总感觉后面有鬼在跟着似的，也自以为是自己在吓自己，可就是去除不了这个怕心。”</p>
@@ -22,8 +22,8 @@
 <p>在工作中，身为班主任，邹兰明白，自己的班级若想被评选为先进，就要向主要领导送礼。“当时连学生都知道这个门道。”</p>
 <p>“我和班上的干部说，通过这样的手段获得先进，那还有什么意义？要评就堂堂正正地评。”这样一来，尽管所在班级未曾评上先进，但班里的学生们却也乐得轻松、自在。</p>
 <p>邹兰发现，当思想变得越来越简单、纯净时，换得的是内心深处的祥和、自在，“我现在不再想着去改变别人了，遇到问题就看自己，改变自己，自己变好了，就会发现周围的环境也随着在变好，在这种状态中，才能体会到真正的幸福。”</p>
-<h2>“放弃修炼<ahref="https://github.com/oruicd3776/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，我不干”</h2>
-<figure id="attachment_12430085" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/db6f6dca15830457f8aca1b8cabddefc.jpg"><img class="size-large wp-image-12430085" src="https://i.epochtimes.com/assets/uploads/2020/09/db6f6dca15830457f8aca1b8cabddefc-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">2003年1月27日，邹兰（前一）和部分法轮功学员在Fitzroy Gardens集体炼功。（陈明／大纪元）</figcaption></figure>
+<h2>“放弃修炼<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，我不干”</h2>
+<figure id="attachment_12430085" aria-describedby="caption-attachment-12430085" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/db6f6dca15830457f8aca1b8cabddefc.jpg"><img class="size-large wp-image-12430085" src="https://i.epochtimes.com/assets/uploads/2020/09/db6f6dca15830457f8aca1b8cabddefc-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-12430085" class="wp-caption-text">2003年1月27日，邹兰（前一）和部分法轮功学员在Fitzroy Gardens集体炼功。（陈明／大纪元）</figcaption></figure>
 <p>在中共1999年镇压法轮功初期，大批法轮功学员前往北京信访办上访，去天安门广场请愿，要求还大法师父清白，还大法清白。</p>
 <p>2000年9月30日晚，邹兰也准备搭乘长途巴士去天安门请愿，不料在上巴士时就遭到警察盘查。</p>
 <p>警察要求每位等待上车的乘客都说一句污蔑法轮功的话。“中共这种手段太卑鄙了”，邹兰说，“他骂一句，就让每一个人跟他学一句。我说，‘我没学过骂人。’他说，‘你不骂你就别想上车。’”</p>
@@ -34,7 +34,7 @@
 <p>“后来，我静下来问自己，如果让一切再回到以前，可以优越地生活，但不能再修炼法轮功了，你干吗？——我说：不干。”</p>
 <p>“当我再次看到，中共在镇压法轮功时所采取的卑劣手段，我更坚信自己的选择是对的，于是把心一横，瞬间什么恐惧和怕心都没了，人反而变得轻松了。就感觉到一种无形的强大能量在保护着我……”</p>
 <h2>“看守所里从没这么欢乐过”</h2>
-<figure id="attachment_12430101" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/1dd7ac934970ca61cf2594bf93404458.jpg"><img class="size-large wp-image-12430101" src="https://i.epochtimes.com/assets/uploads/2020/09/1dd7ac934970ca61cf2594bf93404458-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">2002年10月5日，邹兰和部分法轮功学员在购物商场进行法轮功功法演示。（陈明／大纪元）</figcaption></figure>
+<figure id="attachment_12430101" aria-describedby="caption-attachment-12430101" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/1dd7ac934970ca61cf2594bf93404458.jpg"><img class="size-large wp-image-12430101" src="https://i.epochtimes.com/assets/uploads/2020/09/1dd7ac934970ca61cf2594bf93404458-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-12430101" class="wp-caption-text">2002年10月5日，邹兰和部分法轮功学员在购物商场进行法轮功功法演示。（陈明／大纪元）</figcaption></figure>
 <p>当地派出所的副所长曾威胁邹兰：“你进到看守所后会受罪的，会吃不饱饭、犯人会打你。”邹兰当时笑了笑，没作声，拿出自己带的食物吃起来。</p>
 <p>“他们对我的各种威胁和恐吓，好像对我都不起作用。我反而觉得当时身边的每一个人都是保护我的人。”</p>
 <p>邹兰被送到看守所那天晚上下着雨，警察让她拿床被子和一个吃饭用的碗。她看到所有的被子和碗都堆放在户外的地上被雨淋着，已经辨不出干不干净了。“我在那站了足足有一分钟，都不知道该拿哪个。无奈之下，只好闭着眼睛随便拿起一床被子和一个碗。”</p>
@@ -46,7 +46,7 @@
 <p>“在被关押的14天里，我没有委屈、害怕、怨恨的心，反而觉得自己很高大，那些不好的东西都碰不到我，这一点令我至今感慨不已。什么才能使人超越恐惧、怨恨，能坦然地、无怨无悔地面对一切不公——只有法轮大法能赋予人这样的智慧和能力。”</p>
 <h2>“从小监狱到了大监狱”</h2>
 <p>在看守所里，有人曾试探着问过狱警的头：“她们这些炼法轮功的人，人家又没犯法，人又好，能不能放了人家。”但得到的回答是：“她们和你们可不一样，你们这些人只要有钱，多大的案子我都能帮你们摆平。但法轮功的案子，你给我多少钱，我也不敢碰。”</p>
-<p>“中共对法轮功的恐惧由此可见一般，而迫害善良人的一定是邪恶的。”</p>
+<p>“中共对法轮功的恐惧由此可见一斑，而迫害善良人的一定是邪恶的。”</p>
 <p>真正令邹兰感到忧心的，其实并不是拘留所内的环境，而是在外面受到严控的生活。“从拘留所出来以后，我就好像从一个小监狱到了一个大监狱。”</p>
 <p>“在迫害前，我们学校最多的时候有九十多人都在炼法轮功，以前的党委书记也在炼。但我是我们学校第一个因为炼法轮功被抓的。”邹兰原本有望在2000年晋升为副教授，也因此失之交臂，“那时我对名利也看得很淡了，也不觉得失去了有多可惜。”</p>
 <p>“无论是面对学生还是老师，我从来没有因为被抓有任何自卑感。”她还记得，回到学校后，常常有老师私下对她竖起大拇指。</p>
@@ -57,60 +57,59 @@
 <p>“这种国家恐怖主义行为也是中共发动历次运动惯用的手法。江泽民知道他发动的这场运动已经罪大无边，罪不可恕，所以他要让所有的中国人来替他承担罪过，目的是要毁灭更多的中国人。”</p>
 <h2>来到自由社会 希望更多人明白真相</h2>
 <p>2001年1月，澳洲领事馆批准了邹兰赴澳探亲的申请。拿到签证的第二天，邹兰便离开了自己的家。那时谁也没想到，这一走，就是20年。</p>
-<figure id="attachment_12430112" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/279cb92cca6db6bef9a973afa52fa336.jpg"><img class="size-large wp-image-12430112" src="https://i.epochtimes.com/assets/uploads/2020/09/279cb92cca6db6bef9a973afa52fa336-600x388.jpg" alt="" width="600" b="388" /></a><figcaption class="wp-caption-text">2006年6月21日，邹兰（左一）在堪培拉商场中进行舞蹈表演，展现中华传统文化的美好。（陈明／大纪元）</figcaption></figure>
+<figure id="attachment_12430112" aria-describedby="caption-attachment-12430112" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/279cb92cca6db6bef9a973afa52fa336.jpg"><img class="size-large wp-image-12430112" src="https://i.epochtimes.com/assets/uploads/2020/09/279cb92cca6db6bef9a973afa52fa336-600x388.jpg" alt="" width="600" b="388" /></a><figcaption id="caption-attachment-12430112" class="wp-caption-text">2006年6月21日，邹兰（左一）在堪培拉商场中进行舞蹈表演，展现中华传统文化的美好。（陈明／大纪元）</figcaption></figure>
 <p>由于经历了大陆的严密管控，邹兰非常珍惜海外自由的修炼环境。和无数法轮功学员一样，她一心参与讲真相、和平请愿等活动。</p>
 <p>“国内的经历也为我后来在海外坚定地修炼、全力以赴地讲真相奠定了基础。”邹兰说，“希望更多人能够明白真相，能给自己选择一个美好的未来，我就是这样简单的想法。”她希望人们可以真正了解，法轮功究竟为何能够洪传世界、深入人心。</p>
 <p>“夫人身难得，中土难生，正法难遇；全此三者，幸莫大焉。”难怪《西游记》中的唐三藏要感叹，中国人能处在这个伟大的历史时刻，是多么幸运。</p>
 <p>“法轮大法是正法，珍惜吧！可千万别错过这万古机缘！”这是邹兰最想告诉人们的话。</p>
-<p><ahref="https://github.com/oruicd3776/djy/blob/master/gb/tag/%E4%B8%AD%E7%A7%8B.md#1">中秋</a>节将至，邹兰感激李洪志师父引领自己走在修炼的路上。“师父为我们弟子所做的一切，所承受的一切，是世人难以想像、难以做到的。这些虽然不让我看到，但我能在修炼中感受到其中的一部分。人世间的所有赞美和感激之词都难以表达我对师父的感恩。我唯有在修炼这条路上，不断地精进！跪拜恩师中秋节快乐！”</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E7%A7%8B.md#1">中秋</a>节将至，邹兰感激李洪志师父引领自己走在修炼的路上。“师父为我们弟子所做的一切，所承受的一切，是世人难以想像、难以做到的。这些虽然不让我看到，但我能在修炼中感受到其中的一部分。人世间的所有赞美和感激之词都难以表达我对师父的感恩。我唯有在修炼这条路上，不断地精进！跪拜恩师中秋节快乐！”</p>
 <p>责任编辑：李欣然#</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/18/5/28/n10432159.md#1">魔鬼在统治着我们的世界(9)：信仰篇</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/8/3/n12302526.md#1">ABC为中共迫害辩护 澳议员指其“危险”</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/9/n12391470.md#1">澳洲华文媒体被染指 为中共背书</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/18/n12412365.md#1">无惧疫情 澳大纪元送报工快乐充实（上）</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/28/n12436528.md#1">组图：墨尔本疫情缓解 9月28日起解封</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/28/n12435662.md#1">维州平交道口汽车撞火车 肇事司机重伤直升机送医</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/28/n12435650.md#1">九月连发入室盗窃案 Doncaster成犯罪热点区</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/28/n12435530.md#1">六旬女司机错踩油门 驾车撞倒行人撞上商铺</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/28/n12435496.md#1">工党高层普遍对维州州长强烈不满</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/28/n12435506.md#1">四岁男童自卡铁皮桶 多人救援合力助脱困</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/28/n10432159.md#1">魔鬼在统治着我们的世界(9)：信仰篇</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/8/3/n12302526.md#1">ABC为中共迫害辩护 澳议员指其“危险”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/9/n12391470.md#1">澳洲华文媒体被染指 为中共背书</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/18/n12412365.md#1">无惧疫情 澳大纪元送报工快乐充实（上）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690233.md#1">【一线采访】中共文革式防疫 上海民怨沸腾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690439.md#1">无家可归男子为挣200元 冒充他人打疫苗被控欺骗</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690430.md#1">F1赛事四月重回墨尔本 观众数或近创纪录水平</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690407.md#1">2021年NAPLAN成绩 维州百所最佳学校出炉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/7/n11922895.md#1">维州新增9149例病毒感染 新州新增20389例</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690297.md#1">美欧封杀俄黄金交易 戒备中共趁机收购</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648920.md#1" target="_blank">俞心诚：凯撒之死</a></li><li><a href="https://github.com/oruicd3776/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/10/n11444846.md#1" target="_blank">夏祷：2019火种：天象巨变（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/10/n11375488.md#1" target="_blank">冤狱11年半 前大陆律师堂堂正正反迫害 ?</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/25/n12429747.md#1">美退役少校：外星人1978年入侵基地遭射杀</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/18/n12412674.md#1">上善若水，水善利万物而不争</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/8/n12388919.md#1">灵魂在阴间受刑？古籍记载人身病痛另有缘由</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/23/n12423944.md#1">女子濒死在隧道中高速飞行 还与耶稣对话</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/7/30/n12294991.md#1">【成吉思汗】降生草原 绝境中成长</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/27/n12433623.md#1">【老外看中国】美议员克鲁兹：台湾是自由灯塔</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/27/n12434192.md#1">【新闻第一现场】拜登儿子通中俄 疑涉卖淫人口贩卖圈</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/26/n12433286.md#1">【拍案惊奇】李克强上头版夹缝 中芯国际被制裁</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/25/n12430820.md#1">【新闻看点】中共外交官发飙 联大决议删习语录</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/26/n12431766.md#1">梦想成真 摄影师捕捉银河下狮子饮水的惊人照</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/26/n12431760.md#1">【拍案惊奇】许家印逼宫中共 华为免死了？</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/25/n12430801.md#1">黄鸿升长眠阳明山 生前IG转为纪念账号</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/27/n12433372.md#1">竹内结子被丈夫发现于家中身亡 享年40岁</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/27/n12434488.md#1">刘德华迎59岁生日 刘嘉玲晒合照显交情</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/27/n12433724.md#1">竹内结子死讯公司也震惊 网友忧井本绚子难过</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/25/n12431323.md#1">疫情后袁弘夫妇首回武汉 张歆艺痛斥禽兽教师</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/27/n12433788.md#1">陆媒称共军24小时内可登陆台湾 遭美媒打脸</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/26/n12431601.md#1">车评：完美的油电混合 2020 Lexus RX450h F Sport</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/25/n12430512.md#1">日本前首相医师：这样站立2分钟 等于走路1小时</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/27/n12433931.md#1">丈夫遭鲨鱼攻击 怀孕妻子跳海将他救回来</a></li>
-<li><a href="https://github.com/oruicd3776/djy/blob/master/gb/20/9/23/n12425392.md#1">【线上活动】三类人易发生心脏病 这样吃降三高</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oruicd3776/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oruicd3776/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/25/n12430051.htm">浓情中秋 前大陆讲师感恩李洪志大师（下）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/25/n12430051.htm">浓情中秋 前大陆讲师感恩李洪志大师（下）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oruicd3776/djy/blob/master/gb/20/9/25/n12430051.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/oruicd3776/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/oruicd3776/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oruicd3776/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oruicd3776/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oruicd3776/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/9/25/n12430051.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
